# lightning-uq-box

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  bnn_vi_lv.py  compute_results_uci.py  contribution_guide.md  pyproject.toml  requirements.txt  run_experiment.py  run_uci_experiments.py  setup.py  test_dkl.py  test_sgld.py  testingSWAG.py  testing_bnn.py  testing_bnn_lv.py  testing_dkl.py
.github/: dependabot.yaml
.github/workflows/: style.yaml  tests.yaml
configs/: base.yaml
docs/: application_by_task.md  conf.py  contribute.md  index.md  index.rst  installation.md  method_overview.md  running_experiments.md  tutorial_overview.md  tutorials.md  user_guide.md
docs/_static/: button-width.css  my_theme.css
docs/_templates/: custom_layout.html
docs/api/: datamodules.rst  index.rst  models.rst  train_utils.rst  uq_methods.rst
docs/tutorials/: bayes_by_backprop.ipynb  bnn_vi.ipynb  bnn_vi_elbo.ipynb  bnn_vi_lv.ipynb  cards.ipynb  classification.md  conformal_prediction.ipynb  conv_cond_np.ipynb  deep_ensemble.ipynb  deep_evidential_regression.ipynb  deep_kernel_learning.ipynb  deterministic_gaussian.ipynb  deterministic_uncertainty_estimation.ipynb  earth_observation.md  ebm.ipynb  example_yaml_bnn_eurosat.yaml  gp.ipynb  laplace.ipynb  mc_dropout.ipynb  new_workflow.ipynb  quantile_regression.ipynb  regression.md  regression1D.md  swag.ipynb  uq_method_template.ipynb  workshop_notebook.ipynb
experiments/: eval_utils.py  evaluate_experiment.ipynb  experiment_generator.py  explore_results.ipynb  run_experiment.py  setup_experiment.py  utils.py
experiments/configs/: uci_config.yaml  uci_config_base.yaml  uci_config_bayes_by_backprop.yaml  uci_config_conformal_qr.yaml  uci_config_der.yaml  uci_config_dkl.yaml  uci_config_gaussian_nll.yaml  uci_config_laplace.yaml  uci_config_mc_dropout.yaml  uci_config_npn.yaml  uci_config_qr.yaml  uci_config_sgd.yaml  uci_config_sgld.yaml  uci_config_swag.yaml
experiments/image-regression/: compute_ds_statistics.py  create_launch_scripts.py  eval_utils.py  feature_extracted_usa_vars.py  launch_0.sh  plot_usa_vars_ood.py  run_usa_vars_exp.py  run_usa_vars_ood.py  setup_experiment.py  usa_vars.job  usa_vars_feature.job  utils.py
lightning_uq_box/: __init__.py  __main__.py  main.py
lightning_uq_box/datamodules/: __init__.py  reforesTree.py  toy_8_gaussians.py  toy_bimodal.py  toy_circle.py  toy_donut.py  toy_due.py  toy_gaussian_sideways.py  toy_half_moons.py  toy_heteroscedastic.py  toy_image_classification.py  toy_image_regression.py  toy_image_segmentation.py  toy_multivariate_regression.py  toy_pixelwise_regression.py  toy_sine.py  toy_uncertainty_gaps.py  uci.py  usa_vars.py  utils.py
lightning_uq_box/datasets/: __init__.py  card_regression.py  reforesTree.py  toy_8_gaussians.py  toy_circle.py  toy_donut.py  toy_gaussian_sideways.py  toy_image_classification.py  toy_image_regression.py  toy_image_segmentation.py  toy_pixelwise_regression.py  uci.py  uci_boston.py  uci_concrete.py  uci_energy.py  uci_naval.py  uci_yacht.py  usa_vars.py  western_usa_live_fuel_moisture.py
lightning_uq_box/eval_utils/: __init__.py  uq_computation.py
lightning_uq_box/models/: __init__.py  cards.py  density_layers.py  fc_resnet.py  hierarchical_prob_unet.py  masked_conv.py  mixture_density.py  mlp.py  pixel_cnn.py  prob_unet.py  vae.py
lightning_uq_box/train_utils/: train_scripts.py
lightning_uq_box/uq_methods/: __init__.py  adfmc.py  base.py  bayes_cap.py  bnn_lv_vi.py  bnn_vi.py  bnn_vi_elbo.py  bnn_vi_lv.py  callbacks.py  cards.py  cond_neural_process.py  conformal_qr.py  conformal_risk_control.py  cqr_model.py  ddpm.py  ddpm_scratch.py  ddpm_utils.py  deep_ensemble.py  deep_ensemble_model.py  deep_evidential_regression.py  deep_kernel_learning.py  density_uncertainty.py  deterministic_gaussian.py  deterministic_uncertainty_estimation.py  guided_diffusion.py  guided_diffusion_model.py  hierarchical_prob_unet.py  img2img_conformal.py  inference_time_augmentation.py  iterative_uncertainty.py  laplace_model.py  loss_functions.py  masked_ensemble.py  mc_dropout.py  mc_dropout_conformal.py  mc_dropout_model.py  mean_variance_estimation.py  metrics.py  mixture_density.py  prob_unet.py  (+18 more)
lightning_uq_box/viz_utils/: __init__.py  visualization_tools.py
requirements/: condaEnv.txt  docs.txt  requirements.txt  style.txt  tests.txt
tests/: conftest.py  test_main.py
tests/configs/: base.yaml  base_ensemble.yaml  bayes_by_backprop.yaml  bnn_vi.yaml  bnn_vi_elbo.yaml  bnn_vi_lv_first.yaml  bnn_vi_lv_last.yaml  card_linear.yaml  deep_ensemble.yaml  deep_ensemble_mse.yaml  deep_ensemble_nll.yaml  deep_kernel_learning.yaml  der.yaml  gaussian_nll.yaml  laplace.yaml  mc_dropout.yaml  mc_dropout_mse.yaml  mc_dropout_nll.yaml  multi_swag.yaml  qr_model.yaml  sgld_mse.yaml  sgld_nll.yaml  swag.yaml  timm_config.yaml
tests/datamodules/: test_datamodules.py  test_usa_vars.py
tests/datasets/: test_usa_vars.py
tests/eval_utils/: test_eval_utils.py  test_metrics.py
tests/models/: __init__.py  test_bnn_vi_model.py  test_conv_variational.py  test_linear_variational.py  test_masked_conv.py  test_masked_ensemble.py  test_mixture_density.py  test_rnn_variational.py  test_spectral_norm_layers.py
tests/uq_methods/: __init__.py  test_base.py  test_bayes_by_backprop.py  test_bnn_lv_vi.py  test_bnn_vi.py  test_bnn_vi_elbo.py  test_bnn_vi_lv.py  test_cards.py  test_classification.py  test_cqr_model.py  test_ddpm.py  test_deep_ensemble.py  test_deep_ensemble_model.py  test_deep_evidential_regression.py  test_deep_kernel_learning.py  test_deterministic_gaussian.py  test_deterministic_uncertainty_estimation.py  test_diffusion_models.py  test_image_classification.py  test_image_regression.py  test_image_segmentation.py  test_laplace.py  test_laplace_model.py  test_mc_dropout_model.py  test_mean_variance_estimation.py  test_multi_swag.py  test_multivariate_regression.py  test_pixelwise_regression.py  test_quantile_regression_model.py  test_raps.py  (+6 more)
uq_method_box/: __init__.py
uq_methods_box_env/: pyvenv.cfg
(+432 files in other folders)
