[build-system]
requires = [
    # setuptools 61+ required for pyproject.toml support
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lightning_uq_box"]

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "lightning_uq_box"
description = "Lighning-UQ-Box: A toolbox for uncertainty quantification in deep learning"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Nils Lehmann", email = "n.lehmann@tum.de"},
]
maintainers = [
    {name = "Nils Lehmann", email = "n.lehmann@tum.de"},
]
keywords = ["pytorch", "lightning", "uncertainty quantification", "conformal prediction", "bayesian deep learning"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # lightning 2+ required for LightningCLI args + sys.argv support
    "lightning[pytorch-extra]>=2",
    # matplotlib 3.3.3+ required for Python 3.9 wheels
    "matplotlib>=3.3.3",
    # numpy 1.19.3+ required by Python 3.9 wheels
    "numpy>=1.19.3",
    # pandas 1.1.3+ required for Python 3.9 wheels
    "pandas>=1.1.3",
    # torch 1.12+ required by torchvision
    "torch>=2.0",
    # timm 0.4.12 required by segmentation-models-pytorch
    "timm>=0.4.12",
    # torchmetrics 0.10+ required for binary/multiclass/multilabel classification metrics
    "torchmetrics>=1.2",
    # torchvision 0.13+ required for torchvision.models._api.WeightsEnum
    "torchvision>=0.16",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    ## Tests
    # pytest 7.3+ required for tmp_path_retention_policy
    "pytest>=7.3",
    # pytest-cov 4+ required for pytest 7.2+ compatibility
    "pytest-cov>=4",
    # pytest lazy fixture
    "pytest-lazy-fixture>=0.6",
]