[build-system]
requires = [
    # setuptools 61+ required for pyproject.toml support
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "lightning-uq-box"
description = "Lighning-UQ-Box: A toolbox for uncertainty quantification in deep learning"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Nils Lehmann", email = "n.lehmann@tum.de"},
]
maintainers = [
    {name = "Nils Lehmann", email = "n.lehmann@tum.de"},
]
keywords = ["pytorch", "lightning", "uncertainty quantification", "conformal prediction", "bayesian deep learning"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # einops 0.3+ required for einops.repeat
    "einops>=0.3",
    # lightning 2+ required for LightningCLI args + sys.argv support
    "lightning>=2.4.0",
    # matplotlib 3.5 required for Python 3.10 wheels
    "matplotlib>=3.5",
    # numpy 1.21.1+ required by Python 3.10 wheels
    "numpy>=1.21.1",
    # pandas 1.1.3+ required for Python 3.10 wheels
    "pandas>=1.1.3",
    # torch 1.12+ required by torchvision
    "torch>=2.0",
    # torchmetrics 0.10+ required for binary/multiclass/multilabel classification metrics
    "torchmetrics>=1.2",
    # torchvision 0.13+ required for torchvision.models._api.WeightsEnum
    "torchvision>=0.16.1",
    # scikit-learn
    "scikit-learn>=1.3",
    # for deep kernel learning and other GP models
    "gpytorch>=1.11",
    # Laplace Approximation
    "laplace-torch>=0.2.1",
    # Uncertainty toolbox metrics
    "uncertainty-toolbox>=0.1.1",
    # Kornia for Test Time Augmentations and other image processing
    "kornia>=0.6.9",
    # timm models for image classification and regression
    "timm>=0.9.2",
    # torchseg for segmentation, pixelwise regression
    "torchseg>=0.0.1a1",
    # saving pixelwise and segmentation predictions
    "h5py>=3.12.1",
    # exponential moving average for pytorch models
    "ema-pytorch>=0.7.0"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    ### Tests ###
    # pytest 7.3+ required for tmp_path_retention_policy
    "pytest>=7.3",
    # pytest-cov 4+ required for pytest 7.2+ compatibility
    "pytest-cov>=4",
    # pytest lazy fixture
    "pytest-lazy-fixture>=0.6",
    # hydra-core
    "hydra-core>=1.3.2",
    # omegaconf
    "omegaconf>=2.3.0",
    # jsonargparse
    "jsonargparse[signatures]>=4.28.0",
    ## Style
    # ruff 0.2+ required for [ruff.lint]
    "ruff>=0.2",
]

docs = [
    ### Docs ###
    # sphinx
    "sphinx>=4,<7",
    # ipywidgets 7+ required by nbsphinx
    "ipywidgets>=7",
    # notebooks with sphinx
    "nbsphinx>=0.8.5",
    # reat the docs theme
    "sphinx-book-theme>=1.0.1",
    # Extension for markdown
    "myst-parser>=2.0",
    # toggle dropdowns
    "sphinx-togglebutton>=0.3.2",
    # jupytext notebook creation from .py files
    "jupytext>=1.15.2",
    # ipykernel to run notebooks
    "ipykernel>=6.29.3",
]

[project.scripts]
uq-box = "lightning_uq_box.main:main"

[tool.pytest.ini_options]
# Skip slow tests by default
addopts = "-m 'not slow'"
# https://docs.pytest.org/en/latest/how-to/capture-warnings.html
filterwarnings = [
    # Warnings raised by dependencies of dependencies, out of our control

    # Expected warnings
    # Lightning warns us about using num_workers=0, but it's faster on macOS
    "ignore:The dataloader, .*, does not have many workers which may be a bottleneck:UserWarning",
    # Lightning warns us about using the CPU when a GPU is available
    "ignore:GPU available but not used.:UserWarning",

    # https://github.com/Lightning-AI/lightning/issues/16756
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
    "ignore:pkg_resources is deprecated as an API.:DeprecationWarning:lightning_utilities.core.imports",
    "ignore:distutils Version classes are deprecated. Use packaging.version instead.",

    # testing is run with num_workers=0
    "ignore:The .*dataloader.* does not have many workers which may be a bottleneck:UserWarning:lightning",
    "ignore:The .*dataloader.* does not have many workers which may be a bottleneck:lightning.fabric.utilities.warnings.PossibleUserWarning:lightning",

    # Lightning CLI
    "ignor:LightningCLI's args parameter is intended to run from within Python like if it were from the command line. To prevent mistakes it is not recommended to provide both args and command line arguments",

    # Lightning warns us if TensorBoard is not installed
    "ignore:Starting from v1.9.0, `tensorboardX` has been removed as a dependency of the `lightning.pytorch` package:UserWarning",

    # https://github.com/Lightning-AI/lightning/issues/18545
    "ignore:LightningCLI's args parameter is intended to run from within Python like if it were from the command line.:UserWarning",

    # MLP has activation_fn as a module that can be changed, we use it in tests
    "ignore:Unable to serialize instance ReLU()",

    # Post Hoc methods TODO maybe more finegrained control in tests
    "ignore:`LightningModule.configure_optimizers` returned `None`, this fit will run with no optimizer",
    "ignore:`training_step` returned `None`. If this was on purpose, ignore this warning...",

    # MC-Dropout timm libraries implement dropout as functional an not module
    "ignore:No dropout layers found in model, maybe dropout is implemented through nn.fucntional?",

    # MacOS runner issues
    "ignore:Skipping device Apple Paravirtual device that does not support Metal 2.0:UserWarning",
    "ignore:Found Intel OpenMP ('libiomp') and LLVM OpenMP ('libomp') loaded:RuntimeWarning",

    # Run tests on GPU
    "ignore:The `srun` command is available on your system but is not used:lightning.fabric.utilities.warnings.PossibleUserWarning",
]

[tool.env]
USE_IOMP = "0"

[tool.ruff]
extend-include = ["*.ipynb"]
fix = true

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = ["D", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["D"]
"tests/**" = ["D"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.dynamic]
version = {attr = "lightning_uq_box.__version__"}

[tool.setuptools.package-data]
lightning_uq_box = ["py.typed"]

[tool.setuptools.packages.find]
include = ["lightning_uq_box*"]
